# agent-rms

./: .gitignore  FOR-AGENTS.md  README.md  USAGE.md  pyproject.toml
src/agent_rms/: __init__.py  api_client.py  credentials.py  main.py  output.py  session.py
src/agent_rms/commands/: __init__.py  auth.py  history.py  market.py  portfolio.py  quote.py  trade.py
tests/: test_history_commands.py  test_market_commands.py  test_quote_commands.py  test_trade_commands.py
